gap fix

--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -392,7 +392,7 @@ button {
 .fyntune-heading {
   font-size: 17px;
   font-weight: 500;
-  margin-top: 50px;
+  margin-top: 40px;
 }
 .fyntune-info {
   color: #8d918e;
